Finishing the refactoring
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>